# advent-hs

./: .gitignore  CHANGELOG.md  README.md  advent-of-code.cabal  cabal.project
advent/: advent.cabal
advent/src/2024/06/: Main.hs
advent/src/2024/08/: Main.hs
advent/src/2024/13/: Main.hs
advent/src/2024/15/: Main.hs
advent/src/2024/16/: Main.hs
advent/src/2024/18/: Main.hs
advent/src/2024/21/: Main.hs
advent/src/2025/01/: Main.hs
advent/src/2025/02/: Main.hs
advent/src/2025/03/: Main.hs
advent/src/2025/04/: Main.hs
advent/src/2025/05/: Main.hs
advent/src/2025/06/: Main.hs
advent/src/2025/07/: Main.hs
advent/src/2025/08/: Main.hs
advent/src/2025/09/: Main.hs
advent/src/2025/10/: Main.hs
advent/src/2025/11/: Main.hs
advent/src/2025/12/: Main.hs
advent/src/day02/: Main.hs
advent/src/day03/: Main.hs
advent/src/day05/: Main.hs
advent/src/day11/: Main.hs
advent/src/day14/: Main.hs
advent/src/day15/: Main.hs
advent/src/day17/: Main.hs
advent/src/day18/: Main.hs
advent/src/day19/: Main.hs
advent/src/day20/: Main.hs
advent/src/day21/: Main.hs
advent/src/day24/: Main.hs
advent/src/day25/: Main.hs
common/: common.cabal
common/src/: BitBoard.hs  Grid.hs  MyLib.hs  Pos.hs
src/day01/: Main.hs
src/day02/: Main.hs
src/day03/: Main.hs
src/day04/: Main.hs
src/day05/: Main.hs
src/day06/: Main.hs
src/day07/: Main.hs
src/day08/: Main.hs
src/day09/: Main.hs
src/day10/: Main.hs
src/day11/: Main.hs
src/day12/: Main.hs
src/day13/: Main.hs
src/day14/: Main.hs
src/day15/: Main.hs
src/day16/: Main.hs
src/day17/: Main.hs
src/day18/: Main.hs
src/day22/: Main.hs
src/day23/: Main.hs
