cabal-version:      3.0
name:               advent
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             mickyco94
maintainer:         mickyclerkinoliver@gmail.com
category:           Game
build-type:         Simple

common warnings
    ghc-options: -Wall

common solution
    ghc-options: -Wall
    build-depends:    
      common, 
      base ^>=4.18.3.0,
      hashable,
      unordered-containers,
      containers,
      array,
      megaparsec
    default-language: Haskell2010

executable advent
    import:           warnings
    main-is:          Main.hs
    build-depends:    common, base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable 2024_day01
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/01

executable 2024_day02
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/02

executable 2024_day03
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/03

executable 2024_day04
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/04

executable 2024_day05
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/05

executable 2024_day06
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/06

executable 2024_day07
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/07

executable 2024_day08
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/08

executable 2024_day09
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/09

executable 2024_day10
    import:           solution
    main-is:          Main.hs
    hs-source-dirs:
      src/2024/10

executable 2024_day11
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/11

executable 2024_day12
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/12

executable 2024_day13
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/13

executable 2024_day14
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/14

executable 2024_day15
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/15

executable 2024_day16
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/16

executable 2024_day17
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/17

executable 2024_day18
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/18

executable 2024_day19
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/19

executable 2024_day20
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/20

executable 2024_day21
    import: solution
    main-is: Main.hs
    hs-source-dirs:
      src/2024/21
