cabal-version:      3.0
name:               common
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             mickyco94
maintainer:         mickyclerkinoliver@gmail.com
category:           Game
build-type:         Simple

library
    exposed-modules:  MyLib, Pos, Grid, BitBoard
    build-depends:    
      base ^>= 4.18.3.0,
      megaparsec,
      unordered-containers,
      hashable,
      containers,
      vector
    hs-source-dirs:   src
    default-language: Haskell2010
